<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/about_activity_vertical_margin"
    android:paddingLeft="@dimen/about_activity_horizontal_margin"
    android:paddingRight="@dimen/about_activity_horizontal_margin"
    android:paddingTop="@dimen/about_activity_vertical_margin"
    tools:context="tk.jordynsmediagroup.nightmode.activity.AboutActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/developed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/developed_by"
        android:layout_below="@+id/source_code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/source_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/source_code"
        android:layout_below="@+id/nameView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/licenceText"
        android:layout_below="@+id/developed_by"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
